cupt (1.5.9) UNRELEASED; urgency=low

  * cupt:
    - help:
      - Clarified that 'safe-upgrade' command can remove automatically
        installed packages. Thanks to intrigeri@boum.org. (Closes: #575702)
  * Cupt:
    - Cache:
      - Package:
        - Don't check binary architecture for installed packages. Thanks to
          Julian Andres Klode for the report. (Closes: #574819)
    - Config:
      - Recognize 'apt::get::build-dep-automatic' option.
    - System:
      - Worker:
        - Set the process umask to 022. Thanks to intrigeri@boum.org.
          (Closes: #575700)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 21 Mar 2010 15:56:50 +0200

cupt (1.5.8) unstable; urgency=low

  * Cupt:
    - Cache:
      - Fixed potential crash if some chunk in the index file doesn't contain
        valid Package line.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sat, 20 Mar 2010 15:57:19 +0200

cupt (1.5.7) unstable; urgency=low

  * Cupt:
    - Config:
      - Added packages 'openoffice.org-common', 'openoffice.org-java-common',
        'openoffice.org-writer2latex' to the list of packages which are to be
        upgraded indirectly. Thanks to Michael Stapelberg. (Closes: #573038)
  * debian/control:
    - Bumped Standards-Version to 3.8.4, no changes needed.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sat, 13 Mar 2010 09:37:37 +0200

cupt (1.5.6) unstable; urgency=low

  * Cupt:
    - Cache:
      - 'verify_signature': detect 'no public key' error from gpgv and display
        better error message in this case.
      - 'verify_signature': don't throw fatal error on unexpected messages
        from gpgv. Thanks to Jean-Christophe Dubacq for the report.
        (Closes: #570196)
      - 'verify_signature': recognize 'KEYEXPIRED' gpgv message in addition to
        'EXPSIG' and 'EXPKEYSIG' ones.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sat, 20 Feb 2010 15:17:10 +0200

cupt (1.5.5) unstable; urgency=medium

  * Cupt:
    - Cache: