@@ -402,13 +402,20 @@ sub get_pin ($$) {
 
 	# discourage downgrading 
 	# downgradings will usually have pin <= 0
-	my $package_name = $version->package_name;
 	if (defined $self->_system_state) { # for example, for source versions will return false...
-		my $installed_version_string = $self->_system_state->get_installed_version_string($package_name);
-		if (defined $installed_version_string
-			&& Cupt::Core::compare_version_strings($installed_version_string, $version->version_string) > 0)
-		{
-			$result -= 2000;
+		my $installed_info = $self->_system_state->get_installed_info($version->package_name);
+		if (defined $installed_info) {
+			my $installed_version_string = $installed_info->{'version_string'};
+			if (defined $installed_version_string) {
+				if (Cupt::Core::compare_version_strings($installed_version_string, $version->version_string) > 0)
+				{
+					$result -= 2000;
+				}
+
+				if ($installed_info->{'want'} eq 'hold' && $version->is_installed()) {
+					$result += $self->_config->get_number('cupt::cache::obey-hold');
+				}
+			}
 		}
 	}
 
